[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
futures = "0.3.33"
indexmap = "2.14.0"
num-bigint = "0.4.6"
ordered-float = "5.3.0"
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
twox-hash = "2.1.2"
